<resources>
    <string name="app_name">Music Me !</string>
    <string name="rechercher">Rechercher</string>
    <string name="signup_failed">"Echec création du compte"</string>

    <string name="logo">LOGO</string>
    <string name="login_failed">Echec de la connection</string>

    <string name="snooze">Snooze</string>
    <string name="stop">Stop</string>
    <string name="logo_video">Logo vidéo</string>
    <string name="play">play</string>
    <string name="favori">Favori</string>
    <string name="image_ami">Image ami</string>

    <string name="reveils">Réveils</string>
    <string name="contacts">Contacts</string>
    <string name="ajouter_r_veil">Ajouter Réveil</string>
    <string name="supprimer_r_veil">Supprimer réveil</string>
    <string name="musiques_recues">Musiques reçues</string>
    <string name="notif_recues">Notifications reçues</string>
    <string name="musiques_en_attente">En attente</string>
    <string name="musiques_passees">Passées</string>
    <string name="textNoneMusicPassees">Vous n\'avez aucune musique déjà passées</string>
    <string name="textNoneMusicEnAttente">Vous n\'avez aucune musique en attente</string>
    <string name="icone_notifications_musiques">Icone notifications musiques</string>
    <string name="annuler">Annuler</string>
    <string name="modifier_r_veil">Modifier réveil</string>
    <string name="logo_sonnerie_en_attente">Logo sonnerie en attente</string>
    <string name="delete_clock">Delete Clock</string>
    <string name="message_partage_general">Voici mon contact sur MusicMe!, n\'hésite pas à me proposer des musiques pour mon prochain réveil !</string>
    <string name="message_partage_facebook">Voici mon contact sur MusicMe!, n\'hésite pas à me proposer des musiques pour mon prochain réveil !</string>
    <string name="message_partage_twitter">Voici mon contact sur MusicMe!, n\'hésite pas à me proposer des musiques pour mon prochain réveil !</string>

    <string name="facebook_app_id">241537453728565</string>
    <string name="facebook_client_token">598db20dcd275824df75e91374308e85</string>
    <string name="fb_login_protocol_scheme">fb241537453728565</string>
    <string name="horaire">Horaire :</string>
    <string name="r_p_ter">Répéter :</string>
    <string name="aucune_musique_n_a_t_ajout_e_vos_favoris_pour_le_moment">Aucune musique n\'a été ajoutée à vos favoris pour le moment</string>
    <string name="photo_de_profil">Photo de profil</string>
    <string name="partager">Partager</string>
    <string name="aucune_musique_en_attente_demandez_vos_amis_de_vous_en_envoyer">Aucune musique en attente… Demandez à vos amis de vous en envoyer !</string>
    <string name="chargement_du_r_veil">Chargement du réveil…</string>
    <string name="notifications">Notifications</string>
    <string name="envoyee_par">Envoyée par %1$s</string>
    <string name="utilisateur_anonyme">Non connecté</string>
    <string name="txt_trait_txt">%1$s - %2$s</string>
    <string name="saisir_musique_manuellement">Saisir musique manuellement</string>
    <string name="rechercher_une_musique_dans_les_favoris">Rechercher une musique dans les favoris</string>
    <string name="profil">Profil</string>
    <string name="vous_netes_pas_connecte">Vous n\'êtes pas connecté</string>
    <string name="aucune_video_selectionnee">Aucune vidéo sélectionnéee</string>
    <string name="envoie_musique">Tu as reçu une musique, envoyée par %s !</string>
    <string name="sonnerie_utilisee">Ta musique a réveillé %s !</string>
    <string name="saisie_manuelle">Saisie manuelle</string>
    <string name="veuillez_copier_coller_l_adresse_du_la_vid_o_youtube">Veuillez copier-coller l\'adresse du la vidéo Youtube :</string>
    <string name="lien_youtube">Lien youtube</string>
    <string name="saisissez_un_pseudo_ou_connectez_vous">Saisissez un pseudo, ou connectez-vous</string>
    <string name="pseudonyme">Pseudonyme</string>
    <string name="en_cliquant_sur_partager_tu_g_n_res_un_lien_qui_permettra_d_autres_utilisateurs_de_t_ajouter_leur_contact_et_ou_de_te_proposer_des_musiques_en_r_veil">En cliquant sur Partager, tu génères un lien qui permettra à d\'autres utilisateurs de t\'ajouter à leur contact et/ou de te proposer des musiques en réveil !</string>
    <string name="pour_demander_des_musiques_d_autres_utilisateurs_il_faut_d_abord_se_connecter">Pour demander des musiques à d\'autres utilisateurs, il faut d\'abord se connecter !</string>
    <string name="vous_n_avez_aucun_contact_pour_le_moment">Vous n\'avez aucun contact pour le moment</string>
    <string name="saisissez_votre_recherche_pour_afficher_les_r_sultats">Saisissez votre recherche pour afficher les résultats</string>
    <string name="aucun_resultat">Aucun résultat ne correspond à ta recherche.</string>
    <string name="ok">OK</string>
    <string name="Apropos">A propos</string>
    <plurals name="musique_recu">
        <item quantity="zero">Musique reçue : </item>
        <item quantity="one">Musique reçue : </item>
        <item quantity="other">Musiques reçues : </item>
    </plurals>
    <plurals name="musique_envoyée">
        <item quantity="zero">Musique envoyée : </item>
        <item quantity="one">Musique envoyée : </item>
        <item quantity="other">Musiques envoyées : </item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connectivity_exception_user_message">pas de connection</string>


    <string name="first_letter_monday">L</string>
    <string name="first_letter_tuesday">M</string>
    <string name="first_letter_wednesday">M</string>
    <string name="first_letter_thursday">J</string>
    <string name="first_letter_friday">V</string>
    <string name="first_letter_saturday">S</string>
    <string name="first_letter_sunday">D</string>
    <string name="musique">Musiques</string>
    <string name="historique">Historique</string>
    <string name="settings">Paramètres</string>


    <string name="settings_login">Se connecter</string>
    <string name="settings_account">Ton compte</string>
    <string name="settings_contact">Nous contacter</string>
    <string name="settings_rate">Noter l\'app</string>
    <string name="settings_about">A propos</string>
    <string name="account_logout">Se déconnecter</string>
    <string name="account_edit_success">Ton compte est mis à jour</string>
    <string name="contact_email_address" translatable="false">valerian.guivarch@gmail.com</string>
    <string name="contact_email_subject">Contact</string>
    <string name="error_facebook_missing_mail">Email is missing on your Facebook account. Please add an email address to your Facebook account or login with an email instead</string>
    <string name="error_facebook_missing_mail_title">Can\'t login with Facebook</string>
    <string name="error_no_email_app">Aucun client mail détecté</string>
    <string name="forgot_password_description">Un email te sera envoyé sur cette adresse pour
        réinitialiser ton mot de passe.</string>

    <string name="error_default_message">Une erreur est survenue</string>
    <string name="signup_account_already_exists_error_dialog">Un compte avec l\'adresse %s ou
        le pseudo %s existe
        déjà. Essaie avec une autre adresse ou un autre pseudo ou réinitialise ton mot de passe.</string>
    <string name="legals_link">https://www.error/</string>
    <string name="forgot_password_success">Un email contenant les instructions pour réinitialiser ton mot de passe a été envoyé à %s.</string>


    <string name="error_retry">Une erreur est survenue\nCliquez pour réessayer</string>
    <string name="login_title">Connexion</string>
    <string name="login_close_content_description">Fermer la page</string>
    <string name="login_legals">En continuant, tu acceptes nos <a href="">conditions d’utilisation</a>.</string>
    <string name="signup_email_cta">S\'inscrire</string>
    <string name="login_email_cta">Se connecter</string>
    <string name="login_facebook_cta">Continuer avec Facebook</string>
    <string name="OR">OU</string>
    <string name="login_illu_content_description">Chat confus</string>
    <string name="login_email_title">Continuer avec l\'email</string>
    <string name="login_email_tab_signin">Connexion</string>
    <string name="login_email_tab_signup">Inscription</string>
    <string name="login_form_email_hint">Email</string>
    <string name="login_form_password_hint">Mot de passe</string>
    <string name="login_submit">C\'est parti !</string>
    <string name="login_form_forgot_password">Mot de passe oublié ?</string>
    <string name="signup_form_username_hint">Pseudo</string>
    <string name="login_forgot_password_submit">Envoyer</string>
    <string name="forgot_password_title">Mot de passe oublié ?</string>
    <string name="form_email_format_error">Adresse email invalide</string>
    <string name="form_password_format_error">Mot de passe trop court</string>
    <string name="form_username_format_error">Pseudo trop court</string>
    <string name="login_error">Email ou mot de passe invalide</string>
    <string name="login_successful">Connexion réussie</string>
    <string name="login_facebook_cancelled">Connexion avec Facebook annulée</string>
    <string name="login_facebook_error">Erreur lors de la connexion avec Facebook</string>
    <string name="comment_answer_cta">Répondre</string>

    <string name="legals">End-User License Agreement</string>
    <string name="version_label">App version</string>
    <string name="version" translatable="false">%1$s (%2$d)</string>
    <string name="account_submit">Valider</string>
    <string name="ajouter_un_contact">Ajouter un contact</string>
    <string name="menu">Menu</string>
    <string name="u_mot_de_passe_oubli_u">Mot de passe oublié</string>
    <string name="ou_connectez_vous_avec">ou connecte-toi avec</string>
    <string name="se_connecter_avec_facebook">Se connecter avec Facebook</string>
    <string name="adresse_email">Adresse mail</string>
    <string name="password">Mot de passe</string>
    <string name="general_error">Erreur</string>
    <string name="title_activity_contactdetails">contactdetails</string>
</resources>
