<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/home_clock_navigation"
            android:icon="@drawable/icon_main_menu_alarms"
            android:title="@string/reveils" />
        <item
            android:id="@+id/music_navigation"
            android:icon="@drawable/icon_main_menu_musiques"
            android:title="@string/musique" />
        <item
            android:id="@+id/share_navigation"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/amis" />
        <item
            android:id="@+id/other_navigation"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/historique" />
        <item
            android:id="@+id/settings_navigation"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />


</menu>