<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_facebook_missing_mail_title"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/error_facebook_missing_mail"
            android:textSize="@dimen/text_medium" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/facebookErrorDialogCTA"
            style="@style/bouton_arrondi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/ok" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
