<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_musiques_recues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musiques_recues"
        android:textSize="30sp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        style="@style/AppTheme.BoutonReveil"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bouton_musiques_passees"
            style="?buttonBarButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/musiques_passees"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bouton_musiques_en_attente"
            style="?buttonBarButtonStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:text="@string/musiques_en_attente"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/child_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>
