<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <include
        layout="@layout/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/login_form_email_hint"
                android:nextFocusDown="@id/loginPasswordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/login_form_password_hint"
                android:imeOptions="actionDone"
                app:passwordToggleEnabled="true"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingStart="4dp"
                android:paddingTop="16dp"
                android:paddingEnd="4dp"
                android:text="@string/login_form_forgot_password"
                android:textColor="@color/white_transparent_50"
                android:textSize="@dimen/text_small" />

            <Button
                android:id="@+id/loginSubmit"
                style="@style/bouton_arrondi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="32dp"
                android:text="@string/login_submit" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>
